--- a/frontend/index.css
+++ b/frontend/index.css
@@ -41,6 +41,13 @@ body {
   transition: all 0.2s ease-in-out;
   position: relative;
   overflow: hidden;
+  cursor: pointer;
+}
+
+.btn-glass:active {
+  transform: scale(0.94); /* Reduce el tamaño ligeramente */
+  box-shadow: 0 2px 60px rgba(0, 0, 0, 0.2); /* Reduce la sombra para simular profundidad */
+  backdrop-filter: blur(5px); /* Reduce el blur para simular presión */
 }
 
 .btn-glass:hover {
@@ -61,4 +68,65 @@ body {
 
 .btn-glass:hover::before {
   left: 100%;
+}
+
+.btn-cancel {
+    background-color: #dc2f2f; 
+    color: #f9f9f9; 
+    border: 1px solid #d1d5db; 
+    border-radius: 0.375rem;
+    padding: 0.5rem 1rem; 
+    font-size: 0.875rem;
+    font-weight: 500; 
+    cursor: pointer; 
+    transition: all 0.2s ease; /* Transición suave para efectos */
+
+    &:hover {
+        background-color: #b31313; 
+        border-color: #c9180e;
+    }
+
+    /* Efecto al hacer clic (active) */
+    &:active {
+        background-color: #b40606; /* Fondo aún más oscuro */
+    }
+}
+
+.btn-confirm {
+    background-color: #08a950; 
+    color: #f9f9f9; 
+    border: 1px solid #1bb94a; 
+    border-radius: 0.375rem; 
+    padding: 0.5rem 1rem; 
+    font-size: 0.875rem; 
+    font-weight: 500;
+    cursor: pointer; 
+    transition: all 0.2s ease; 
+
+    &:hover {
+        background-color: #069d47; 
+        border-color: #08a051;
+    }
+
+    /* Efecto al hacer clic (active) */
+    &:active {
+        background-color: #069e2e; 
+    }
+}
+
+.btn-trashcan {
+    padding: 0.375rem; 
+    border-radius: 0.25rem; 
+    cursor: pointer; 
+    transition: all 0.2s ease; /* Transición suave para el color */
+    color: #ef4444; 
+}
+
+.btn-trashcan:hover {
+    color: #dc2626;
+    transform: scale(1.04); /* Opcional: ligero zoom al pasar el cursor */
+}
+
+.btn-trashcan:active {
+    color: #b91c1c; 
 }
